--- a/src/global.css
+++ b/src/global.css
@@ -3,27 +3,23 @@
 ****************************/
 
 /* Backgrounds image */
-#page-header .primary {
-    background-image: url(public/assets/headerBackgroundImage.png);
+#page-header img {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  max-height: 225px;
 }
 
 #search_banner {
-    background-image: url(public/assets/savedSearchBannerImage.jpg);
-}
-
-@media (min-width: 480px) {
-    #page-header .primary-right-background {
-        background-image: url(public/assets/headerRightImage.png);
-    }
+  background-image: url(public/assets/savedSearchBannerImage.png);
 }
 
 .page-section-header-home-index.has-backdrop-image,
 .page-section-header-home-index.improvedLayout.has-backdrop-image {
-    background-image: none;
+  background-image: none;
 }
 
 /* Backgrounds color */
-#page-header .primary,
 #back-to-top .icon,
 .pages .currentStep,
 .btn-primary:hover,
@@ -31,24 +27,25 @@
 .sub-logo-banner.improvedLayout,
 .about-text.improvedLayout,
 .share-box {
-    background-color: #a31f34;
+  background-color: #a31f34;
 }
 
-.share-box .twitter svg{
-    fill: #a31f34;
+.share-box .twitter svg {
+  fill: #a31f34;
 }
 
 .twitter:hover path {
-    fill:#8c6e4a;
+  fill: #8c6e4a;
 }
 
 /* Community Portal Banner */
 .community-portal-banner {
-    background-color: #000000;
+  background-color: #000000;
 }
 
-.community-portal-banner a:link, .community-portal-banner a:visited {
-    color: #ffffff;
+.community-portal-banner a:link,
+.community-portal-banner a:visited {
+  color: #ffffff;
 }
 
 /* Colors */
@@ -72,20 +69,22 @@
 .content-navigation ul.has-overflow-navigation li button:hover i.icon,
 .content-navigation ul.has-overflow-navigation li button:focus i.icon,
 .tooltip-container button:hover i,
-.tooltip-container button:focus i
-.btn-search-filter-popup, .btn-search-filter-show-more, .btn-search-filter-show-less,
-.search-result-top .search-tools li.search-orderings button, .btn-search-filter-popup,
-.toggle-responsive-map:hover:after{
-    color: #a31f34;
+.tooltip-container button:focus i .btn-search-filter-popup,
+.btn-search-filter-show-more,
+.btn-search-filter-show-less,
+.search-result-top .search-tools li.search-orderings button,
+.btn-search-filter-popup,
+.toggle-responsive-map:hover:after {
+  color: #a31f34;
 }
 
 /* Borders */
 .btn-primary,
 #page-header .secondary nav.content-navigation li.selected a,
 .content-profile-navigation nav li.selected a {
-    border-color: #a31f34;
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
+  border-color: #a31f34;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
 }
 
 /****************************
@@ -94,7 +93,7 @@
 
 .global-search.focus,
 .search-cp-link a:focus {
-    box-shadow: 0 0 5px 0 rgba(245, 47, 78, 0.2);
+  box-shadow: 0 0 5px 0 rgba(245, 47, 78, 0.2);
 }
 
 /****************************
@@ -112,99 +111,123 @@
 .custom-select > ul li.selected:hover,
 .custom-select > ul > li.selected:focus,
 .inline-trend-graph .bar,
-.skip-content a{
-    background-color: #8c6e4a;
+.skip-content a {
+  background-color: #8c6e4a;
 }
 
 /****************************
 * Link color visited
 ****************************/
 a:visited {
-    color: #8c6e4a
+  color: #8c6e4a;
 }
 
 /****************************
 * Link color focus
 ****************************/
 .page-section.welcome a:focus,
-.search-all-content:hover, .search-all-content:focus, .media .ref a:hover,
-button.popup-collaborators:hover, button.popup-collaborators:focus {
-    text-decoration: underline;
+.search-all-content:hover,
+.search-all-content:focus,
+.media .ref a:hover,
+button.popup-collaborators:hover,
+button.popup-collaborators:focus {
+  text-decoration: underline;
 }
 
 #back-to-top button:focus i,
 .tooltip-container button:hover span.icon,
 .tooltip-container button:focus span.icon {
-    background: #8c6e4a;
+  background: #8c6e4a;
 }
 
 /****************************
 * Concept search
 ****************************/
 .search-concept-result {
-    border: 1px solid #a31f34;
-    background-color: rgba(245, 47, 78, 0.1);
+  border: 1px solid #a31f34;
+  background-color: rgba(245, 47, 78, 0.1);
 }
 
 /* Colors */
-a, .btn-primary, .search-concept-result a:visited, .portal_link, .author-link, .language_btn, .has-overflow-navigation button, ul.tabs li, #main-search .global-search .form-field-dropdown .btn, .rendering_equipment_equipmentownerportal a, .search-menu a:visited, #search_banner a p.linktext,
-[role="tab"], #main-search .global-search .form-field-dropdown .btn, .rendering_equipment_equipmentownerportal a, #publication-trends, ul.content-statistics button, button.popup-collaborators {
-    color: #8c6e4a;
+a,
+.btn-primary,
+.search-concept-result a:visited,
+.portal_link,
+.author-link,
+.language_btn,
+.has-overflow-navigation button,
+ul.tabs li,
+#main-search .global-search .form-field-dropdown .btn,
+.rendering_equipment_equipmentownerportal a,
+.search-menu a:visited,
+#search_banner a p.linktext,
+[role="tab"],
+#main-search .global-search .form-field-dropdown .btn,
+.rendering_equipment_equipmentownerportal a,
+#publication-trends,
+ul.content-statistics button,
+button.popup-collaborators {
+  color: #8c6e4a;
 }
 
 #page-footer {
-    border-top: 2px solid #a31f34;
+  border-top: 2px solid #a31f34;
 }
 
 ul.has-overflow-navigation.li.dropdown-overflow {
-    color: #8c6e4a;
+  color: #8c6e4a;
 }
 
 ul.has-overflow-navigation.li.dropdown-overflow {
-    color: #8c6e4a;
+  color: #8c6e4a;
 }
 
 .tooltip-container .icon.activate,
 .tooltip-container button:hover .icon,
 .tooltip-container button:focus .icon {
-    color: #8c6e4a;
+  color: #8c6e4a;
 }
 
 /*
 rendering_person_personsocialmediaorcidrendererportal - is here to support backwards compatibility
 */
-.rendering_person_personsocialmediaorcidrendererportal, .rendering_person_personsocialmediarendererportal {
-    .link:hover {
-        color: #8c6e4a !important;
-    }
+.rendering_person_personsocialmediaorcidrendererportal,
+.rendering_person_personsocialmediarendererportal {
+  .link:hover {
+    color: #8c6e4a !important;
+  }
 }
 
-.slick-next, .slick-next:before, .slick-prev, .slick-prev:before {
-    color: #8c6e4a !important;
+.slick-next,
+.slick-next:before,
+.slick-prev,
+.slick-prev:before {
+  color: #8c6e4a !important;
 }
 
 .has-overflow-navigation.improvedLayout li {
-a:hover {
+  a:hover {
     color: #a31f34 !important;
-}
+  }
 }
 
-.page-section-header-home-index.improvedLayout, .improvedLayout-section .page-section.page-section-home.page-section-home-index.improvedLayout {
-    background-image: url(public/assets/headerBackgroundImage.png);
-    background-color: #a31f34;
+.page-section-header-home-index.improvedLayout,
+.improvedLayout-section
+  .page-section.page-section-home.page-section-home-index.improvedLayout {
+  background-image: url(public/assets/headerBackgroundImage.png);
+  background-color: #a31f34;
 }
 
 ul.improvedLayout-menu li.selected a {
-    border-bottom: solid 2px #a31f34;
-
+  border-bottom: solid 2px #a31f34;
 }
 
 ul.improvedLayout-menu li.selected a:hover {
-    color: #a31f34;
+  color: #a31f34;
 }
 
 .improvedLayout-colloboration-map .form-field-dropdown.dropdown {
-    border: 2px solid #a31f34;
+  border: 2px solid #a31f34;
 }
 
 /****************************
@@ -216,59 +239,62 @@ ul.improvedLayout-menu li.selected a:hover {
 body div#onetrust-consent-sdk a,
 body div#onetrust-consent-sdk .ot-host-expand,
 #showCountries,
-.country-list button:hover, .country-list button[aria-expanded="true"],
-button#ot-sdk-btn.ot-sdk-show-settings{
-    color:#8c6e4a !important;
+.country-list button:hover,
+.country-list button[aria-expanded="true"],
+button#ot-sdk-btn.ot-sdk-show-settings {
+  color: #8c6e4a !important;
 }
 
-body #onetrust-pc-sdk .ot-chkbox input[type=checkbox]:checked+label::after {
-    color: #a31f34 !important;
+body #onetrust-pc-sdk .ot-chkbox input[type="checkbox"]:checked + label::after {
+  color: #a31f34 !important;
 }
 
-#onetrust-pc-sdk #filter-btn-handler{
-    background:#a31f34 !important;
+#onetrust-pc-sdk #filter-btn-handler {
+  background: #a31f34 !important;
 }
 body div#onetrust-consent-sdk path {
-    fill: #fff !important;
+  fill: #fff !important;
 }
 
 /* General styling for cookie consent buttons & svg + hover/focus */
 body div#onetrust-consent-sdk button,
 body #onetrust-pc-sdk .ot-chkbox label::before {
-    background:#fff !important;
-    color:#8c6e4a !important;
-    border: #a31f34 !important;
-    border-width: 2px!important;
-    border-style: solid!important;
+  background: #fff !important;
+  color: #8c6e4a !important;
+  border: #a31f34 !important;
+  border-width: 2px !important;
+  border-style: solid !important;
 }
 
 /* svg path color */
-div#onetrust-pc-sdk #filter-btn-handler path, div#onetrust-pc-sdk #filter-btn-handler:hover path{
-    fill:#fff !important;
+div#onetrust-pc-sdk #filter-btn-handler path,
+div#onetrust-pc-sdk #filter-btn-handler:hover path {
+  fill: #fff !important;
 }
 
-div#onetrust-pc-sdk .ot-link-btn.back-btn-handler path{
-    fill: #8c6e4a!important;
+div#onetrust-pc-sdk .ot-link-btn.back-btn-handler path {
+  fill: #8c6e4a !important;
 }
 div#onetrust-pc-sdk .ot-link-btn.back-btn-handler:hover path,
 div#onetrust-pc-sdk .ot-link-btn.back-btn-handler:focus path,
 div#onetrust-consent-sdk #filter-btn-handler:hover path,
-div#onetrust-consent-sdk #filter-btn-handler:focus path{
-    fill: #fff!important;
+div#onetrust-consent-sdk #filter-btn-handler:focus path {
+  fill: #fff !important;
 }
 
 /* Accept and settings button + hover/focus */
 
-body div#onetrust-consent-sdk #onetrust-accept-btn-handler, body div#onetrust-consent-sdk #onetrust-pc-btn-handler{
-    background:#fff !important;
-    color:#8c6e4a !important;
-    border-color: #a31f34 !important;
-    border-width: 2px!important;
-    border-style: solid!important;
+body div#onetrust-consent-sdk #onetrust-accept-btn-handler,
+body div#onetrust-consent-sdk #onetrust-pc-btn-handler {
+  background: #fff !important;
+  color: #8c6e4a !important;
+  border-color: #a31f34 !important;
+  border-width: 2px !important;
+  border-style: solid !important;
 }
 
-body div#onetrust-consent-sdk #onetrust-pc-btn-handler{
-    color:#8c6e4a !important;
+body div#onetrust-consent-sdk #onetrust-pc-btn-handler {
+  color: #8c6e4a !important;
 }
 
 body div#onetrust-consent-sdk #onetrust-accept-btn-handler:hover,
@@ -286,7 +312,7 @@ body div#onetrust-consent-sdk #clear-filters-handler:focus,
 body div#onetrust-consent-sdk #filter-apply-handler:hover,
 body div#onetrust-consent-sdk #filter-apply-handler:focus,
 body div#onetrust-consent-sdk #filter-cancel-handler:hover,
-body div#onetrust-consent-sdk #filter-cancel-handler:focus{
-    background:#a31f34 !important;
-    color: #fff!important;
+body div#onetrust-consent-sdk #filter-cancel-handler:focus {
+  background: #a31f34 !important;
+  color: #fff !important;
 }
