--- a/src/default.scss
+++ b/src/default.scss
@@ -3,6 +3,14 @@
 ****************************/
 
 /* Backgrounds image */
+#page-header {
+  background-color: #e42b23;
+}
+
+#page-header .noimg {
+  opacity: 0;
+}
+
 #page-header img {
   max-width: 100%;
   width: 100%;
@@ -10,7 +18,7 @@
   max-height: 160px;
 }
 
-#page-header .logo {
+#page-header .logo-left {
  position: absolute;
  top: 10px;
  left: 25px;
@@ -18,14 +26,22 @@
  width: 200px;
 }
 
+#page-header .logo-right {
+ position: absolute;
+ top: 10px;
+ right: 25px;
+ max-width: 200px;
+ width: 200px;
+}
+
 #page-header .text-logo {
  position: absolute;
- top: 0;
- width: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
+  top: 20px;
+  width: 100%;
   text-align: center;
-  color: #d53131;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: white;
+  color: white;
   font-size: 3em;
   font-weight: 700;
 }
